--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: S-Lab
-description: > # this means to ignore newlines until "baseurl:"
-  A segmentation group
+#title: S-Lab
+#description: > # this means to ignore newlines until "baseurl:"
+#  A segmentation group
 repository: https://liusi-group.com
 baseurl: ""  # the subpath of your site, e.g. /blog
 url: http://liusi-group.com  # the base hostname & protocol for your site
